# SFML_Experiments

./: Makefile  README.md
CMake_Basics/: CMakeLists.txt
CMake_n_SFML/srcs/: main.cpp
Collectables_System/src/: ACollectible.cpp  ACollectible.h  AProjectile.cpp  CollectibleTextBox.cpp  CollectibleTextBox.h  CollectiblesManager.cpp  CollectiblesManager.h  Game.cpp  Game.h  GameTime.h  InputHandler.h  Player.cpp  Player.h  Rectangle.h  SlowMotion.cpp  SlowMotion.h  Tweener.h  Vampire.cpp
Current Build/src/: Game.cpp  Game.h  InputHandler.cpp  Player.cpp  Weapon.cpp
Fonts/srcs/: main.cpp
HUD/: CMakeLists.txt
HUD/includes/: FireEffect.hpp  Game.hpp  Game2.hpp  HUDComponent.hpp  HUDComponentWithFollow.hpp  HealthBar.hpp  Player.hpp  Player2.hpp  PlayerHealthBar.hpp
HUD/src/: ALevel.cpp  Camera.cpp  Camera.h  Constants.h  Eye.cpp  Eye.h  FireEffect.h  Game.cpp  Game.h  HUDComponent.cpp  HUDManager.hpp  InputHandler.cpp  InputHandler.h  InputHandler.hpp  LinearAnimator.cpp  Main.cpp  ParticleSystem.cpp  ParticleSystem.h  PerlinAnimator.h  Player.cpp  Player.h  PlayerHealthBar.cpp  PlayerHealthBar.hpp  Tweener.cpp  Tweener.h
HUD/srcs/: FireEffect.cpp  Game.cpp  Game2.cpp  HUDComponent.cpp  HUDComponentWithFollow.cpp  HealthBar.cpp  InputHandler.cpp  Player.cpp  Player2.cpp  PlayerHealthBar.cpp  Rectangle2.cpp  main.cpp
Old Branches/Fonts/: CMakeLists.txt
Old Branches/Particle_System/: CMakeLists.txt
Particle_System/: CMakePresets.json
Particle_System/includes/: ParticleSystem.hpp
Particle_System/srcs/: APropertyAnimator.cpp  main.cpp
Projectile_System/src/: AProjectile.cpp  AProjectile.h  Eye.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  Player.cpp  Player.h  ProjectileManager.cpp  ProjectilePool.cpp  ProjectilePool.h  ProjectileTextBox.cpp  ProjectileTextBox.h  Projectilemanager.h  Rectangle.h  StoryletBox.cpp  StoryletReader.h
Screenshake/: CMakeLists.txt
Screenshake/.cache/clangd/index/: Camera.cpp.6FF318EC7D466761.idx  Camera.hpp.4D52AD4FBD7CD56F.idx  Eye.cpp.2243C903D6469E92.idx  Eye.hpp.ECF6D965363A567D.idx  PropertyAnimator.hpp.B46ABB831C0918B2.idx  main.cpp.362621828329AD3F.idx
Screenshake/includes/: BitmapReader.hpp  Camera.hpp  Eye.hpp  GameState.hpp  GameTime.hpp  MathUtils.hpp  PerlinNoiseGenerator.hpp  data.hpp
Screenshake/srcs/: Camera.cpp  Eye.cpp  GameState.cpp  GameTime.cpp  main.cpp
Sprites_n_Textures/includes/: Eye.hpp
Sprites_n_Textures/srcs/: Eye.cpp
State_N_Time/: CMakeLists.txt
State_N_Time/includes/: APropertyAnimator.hpp  Camera.hpp  Eye.hpp  LinearAnimator.hpp  PerlinAnimator.hpp  PropertyAnimator.hpp  Tweener.hpp
State_N_Time/srcs/: APropertyAnimator.cpp  Camera.cpp  Eye.cpp  LinearAnimator.cpp  PerlinAnimator.cpp  PropertyAnimator.cpp  Tweener.cpp  main.cpp
Text_Boxes/assets/: storylets.txt
Text_Boxes/src/: ALevel.h  APropertyAnimator.cpp  APropertyAnimator.h  ATextBox.cpp  ATextBox.h  Game.cpp  Game.h  HUDManager.h  InputHandler.cpp  LinearAnimator.h  Main.cpp  Player.cpp  Player.h  PlayerHealthBar.h  StoryletBox.cpp  StoryletBox.h  StoryletReader.h  Vampire.cpp  Weapon.cpp  Weapon.h  WeaponTextBox.cpp  WeaponTextBox.h
Waves_System/src/: ACollectible.cpp  ACollectible.h  AProjectile.cpp  AProjectile.h  BoundingBox.cpp  Camera.cpp  Camera.h  CollectiblesManager.cpp  CollectiblesManager.h  Constants.h  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  EnemyTextBox.cpp  EnemyTextBox.h  EnergyBar.cpp  Game.cpp  Game.h  GameState.h  InputHandler.cpp  InputHandler.h  PerlinAnimator.cpp  Player.cpp  Player.h  (+12 more)
srcs/: main.cpp
(+34 files in other folders)
